--- a/src/app/products/product-list/product-list.component.html
+++ b/src/app/products/product-list/product-list.component.html
@@ -3,7 +3,8 @@
 </h2>
 
 <div class="right">
-    {{ productsNumber$ | async }} products /
+    {{ productsNumber$ | async }} products displayed /
+    {{ productsTotalNumber$ | async }} total on server
 
     {favourites, plural,
     =0 {no favourite}
@@ -54,7 +55,7 @@
         Next Page >
     </button>
 
-    <button (click)="loadMore()" *ngIf="(productsNumber$ | async) <= end">
+    <button (click)="loadMore()" *ngIf="(productsNumber$ | async) <= end && !(isLastPage$ | async)">
         Load {{productsToLoad}} more...
     </button>
 </div>
